--- a/Main.css
+++ b/Main.css
@@ -13,6 +13,9 @@ h3{
     color: white;
 }
 button {
+    font-family: cursive;
+    font: optional;
+    color: blue;
     background-color:crimson;
     height: 70px;
     width: 200px;
