--- a/game.css
+++ b/game.css
@@ -1,10 +1,20 @@
+body {
+    background-color: #6CCFF6;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
+    place-items: center;
 }
 
+h1 {
+    text-decoration:underline;
+    color: #001011;
+    font-size: 30px;
+}
 #title {
-    grid-column: span 3;
+    grid-column: span 4;
     text-align: center;
 }
 
@@ -14,15 +24,26 @@
 
 .game {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin: 40px;
+    grid-template-columns: auto auto auto auto;
 }
 
 #game {
-    grid-column: span 3;
+    grid-column: span 4;
 }
 
 .cards {
     text-align: center;
-    padding: 10px;
+}
+
+#box {
+    grid-column-start: 2;
+}
+
+button {
+    font-size: 40px;
+    height: 60px;
+    width: 200px;
+    border-radius: 50px;
+    border: 2px solid #757780;
+    background-color: #98CE00;
 }
